Increase text contrast in Courses dropdown and Discussions Fixes: CNVS-14304
Test plan:
- Check the main Courses dropdown in regular-contrast mode
  and verify that the subtitle text (Enrolled as: teacher)
  is now darker, like the screenshot I have posted in the
  JIRA
- Create a discussion and a couple of replies
- Verify that the Reply link is now darker, like on the
  screenshot I have attached to the JIRA. I used the
  ensure-color-contrast function, so the colors should
  now adhere to  WebAIM standards.

Reviewed-on: https://gerrit.instructure.com/39114
Tested-by: Jenkins <jenkins@instructure.com>
QA-Review: Anna Koalenz <akoalenz@instructure.com>
Product-Review: Chris Hart <chart@instructure.com>

--- a/app/stylesheets/base/_#header.sass
+++ b/app/stylesheets/base/_#header.sass
@@ -201,8 +201,6 @@
         display: block
         @if $use_high_contrast
           color: $menu-text-color
-        @else
-          color: #bcbcbc
         font-size: 9px
       .menu-item-drop-float-right
         float: right
